[gd_scene load_steps=14 format=3 uid="uid://box7rrf52x7y1"]

[ext_resource type="FontFile" uid="uid://gunvccib1svm" path="res://assets/fonts/Poppins-Regular.ttf" id="1_c2u1v"]
[ext_resource type="Script" uid="uid://0qm1asb1plrn" path="res://scripts/options.gd" id="2_options"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjkok"]
bg_color = Color(0.51381, 0.68613404, 0.62646294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2iy26"]
bg_color = Color(0.79613936, 0.60749817, 0.2546859, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kv8mn"]

[sub_resource type="PrismMesh" id="PrismMesh_1sggn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(1, 1, 0.8392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.00011382803, 0.00011382803, 0.00011382803, 0.6)
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.29954746, 0.29954746, 0.29954743, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.00011382803, 0.00011382803, 0.00011382803, 0.6)
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.92615587, 0.79888654, 0.80990773, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.00011382803, 0.00011382803, 0.00011382803, 0.6)
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_focus"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_controls"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yjkok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2iy26"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_options")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yjkok")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 792.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2iy26")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(0.98898584, 0.86889833, 0.7355447, 1)
position = Vector2(649.3062, 327.9569)
rotation = 0.3820917
scale = Vector2(-20.16319, 715.4113)
mesh = SubResource("BoxMesh_kv8mn")

[node name="triangle" type="MeshInstance2D" parent="."]
modulate = Color(0.79613936, 0.60749817, 0.2546859, 1)
position = Vector2(730.88367, 341.4076)
rotation = 3.3178723
scale = Vector2(-307.19186, 720.29913)
mesh = SubResource("PrismMesh_1sggn")

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.46300003
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.0
offset_top = -298.02402
offset_right = -294.0
offset_bottom = -212.02402
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 48
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hackclub" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.46300003
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 291.0
offset_top = 199.97598
offset_right = 574.0
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "This game was made for Milkyway, an event for Hack Club!"
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 40
text = "hack club."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 568.0
offset_right = 132.0
offset_bottom = 603.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxEmpty_focus")
text = "Back"

[node name="SettingsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -530.0
offset_top = -219.0
offset_right = -100.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="SFXContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SFXLabel" type="Label" parent="SettingsContainer/SFXContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 20
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="SettingsContainer/SFXContainer"]
modulate = Color(0.98898584, 0.86889833, 0.7355447, 1)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="SFXValue" type="Label" parent="SettingsContainer/SFXContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "100%"
horizontal_alignment = 2

[node name="MusicContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MusicLabel" type="Label" parent="SettingsContainer/MusicContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 20
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/MusicContainer"]
modulate = Color(0.98898584, 0.86889833, 0.7355447, 1)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="MusicValue" type="Label" parent="SettingsContainer/MusicContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "100%"
horizontal_alignment = 2

[node name="SensitivityContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SensitivityLabel" type="Label" parent="SettingsContainer/SensitivityContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 20
text = "Sensitivity"

[node name="SensitivitySlider" type="HSlider" parent="SettingsContainer/SensitivityContainer"]
modulate = Color(0.98898584, 0.86889833, 0.7355447, 1)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 1.0
max_value = 20.0
value = 5.0

[node name="SensitivityValue" type="Label" parent="SettingsContainer/SensitivityContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "0.005"
horizontal_alignment = 2

[node name="CrosshairContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CrosshairLabel" type="Label" parent="SettingsContainer/CrosshairContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 20
text = "Crosshair"

[node name="GreenButton" type="Button" parent="SettingsContainer/CrosshairContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.92, 0, 1)
theme_override_font_sizes/font_size = 18
text = "●"

[node name="RedButton" type="Button" parent="SettingsContainer/CrosshairContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "●"

[node name="WhiteButton" type="Button" parent="SettingsContainer/CrosshairContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "●"

[node name="CrosshairPreview" type="Label" parent="SettingsContainer/CrosshairContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2087988, 0.92084754, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 24
text = "•"

[node name="ControlsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 194.0
offset_top = -205.0
offset_right = 549.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_controls")

[node name="ControlsTitle" type="Label" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 22
text = "CONTROLS"
horizontal_alignment = 1

[node name="ControlsList" type="VBoxContainer" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Control1" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "WASD - Move"

[node name="Control2" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "SPACE - Jump"

[node name="Control3" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "SHIFT - Sprint"

[node name="Control4" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "LEFT CLICK - Pick up / Drop object"

[node name="Control5" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "RIGHT CLICK (Hold) - Throw object"

[node name="Control6" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "Q / E - Shrink / Expand object"

[node name="Control7" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "SCROLL / CTRL+SCROLL - Rotate object"

[node name="Control8" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "R - Glue/Freeze object in place"

[node name="Control9" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "C (Hold) - Zoom"

[node name="Control10" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "TAB - Toggle player list"

[node name="Control11" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "F - Enter/Exit cart"

[node name="Control12" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "1-4 - Select hotbar slot"

[node name="Control13" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "ESC - Pause menu"

[node name="Control14" type="Label" parent="ControlsPanel/ControlsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "` (Backtick) - Developer console"

[node name="GraphicsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -530.0
offset_top = -12.0
offset_right = -100.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="GraphicsTitle" type="Label" parent="GraphicsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "GRAPHICS"

[node name="WindowModeContainer" type="HBoxContainer" parent="GraphicsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="WindowModeLabel" type="Label" parent="GraphicsContainer/WindowModeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "Window Mode"

[node name="WindowModeOption" type="OptionButton" parent="GraphicsContainer/WindowModeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_yjkok")

[node name="ResolutionContainer" type="HBoxContainer" parent="GraphicsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResolutionLabel" type="Label" parent="GraphicsContainer/ResolutionContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="GraphicsContainer/ResolutionContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_yjkok")

[node name="VSyncContainer" type="HBoxContainer" parent="GraphicsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VSyncLabel" type="Label" parent="GraphicsContainer/VSyncContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "V-Sync"

[node name="VSyncCheck" type="CheckBox" parent="GraphicsContainer/VSyncContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2iy26")
text = "Enabled"

[node name="FPSContainer" type="HBoxContainer" parent="GraphicsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FPSLabel" type="Label" parent="GraphicsContainer/FPSContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "Show FPS"

[node name="FPSCheck" type="CheckBox" parent="GraphicsContainer/FPSContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2iy26")
text = "Enabled"

[node name="RenderScaleContainer" type="HBoxContainer" parent="GraphicsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RenderScaleLabel" type="Label" parent="GraphicsContainer/RenderScaleContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 16
text = "Render Scale"

[node name="RenderScaleSlider" type="HSlider" parent="GraphicsContainer/RenderScaleContainer"]
modulate = Color(0.98898584, 0.86889833, 0.7355447, 1)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 50.0
value = 100.0

[node name="RenderScaleValue" type="Label" parent="GraphicsContainer/RenderScaleContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8235294, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 14
text = "100%"
horizontal_alignment = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="SettingsContainer/SFXContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="SettingsContainer/MusicContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsContainer/SensitivityContainer/SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
[connection signal="pressed" from="SettingsContainer/CrosshairContainer/GreenButton" to="." method="_on_green_button_pressed"]
[connection signal="pressed" from="SettingsContainer/CrosshairContainer/RedButton" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="SettingsContainer/CrosshairContainer/WhiteButton" to="." method="_on_white_button_pressed"]
[connection signal="item_selected" from="GraphicsContainer/WindowModeContainer/WindowModeOption" to="." method="_on_window_mode_option_item_selected"]
[connection signal="item_selected" from="GraphicsContainer/ResolutionContainer/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="toggled" from="GraphicsContainer/VSyncContainer/VSyncCheck" to="." method="_on_vsync_check_toggled"]
[connection signal="toggled" from="GraphicsContainer/FPSContainer/FPSCheck" to="." method="_on_fps_check_toggled"]
[connection signal="value_changed" from="GraphicsContainer/RenderScaleContainer/RenderScaleSlider" to="." method="_on_render_scale_slider_value_changed"]
